--- a/service-ballthai/templates/teams.html
+++ b/service-ballthai/templates/teams.html
@@ -13,6 +13,7 @@
             <div class="logo">⚽ BallThai - จัดการทีม</div>
             <div class="user-info">
                 <a href="/dashboard.html" style="color: white; text-decoration: none; margin-right: 1rem;">🏠 หน้าหลัก</a>
+                <a href="/leagues.html" style="color: white; text-decoration: none; margin-right: 1rem;">🏆 จัดการลีก</a>
                 <button class="logout-btn" onclick="logout()">ออกจากระบบ</button>
             </div>
         </div>
