--- a/service-ballthai/templates/matches.html
+++ b/service-ballthai/templates/matches.html
@@ -51,11 +51,12 @@
                             <label>ประเภทการแข่งขัน</label>
                             <select name="stage_name" id="stage_name_select" required class="search-input">
                                 <option value="">-- เลือกประเภทการแข่งขัน --</option>
+                                <!-- ตัวเลือกจะถูกเติมโดย JS โดย value เป็น stage_id -->
                             </select>
                         </div>
                         <div style="margin-bottom:1rem;">
                             <label>สนามแข่งขัน</label>
-                            <select name="stage_name" id="stage_name_select" required class="search-input">
+                            <select name="stadium_id" id="stadium_select"  class="search-input">
                                 <option value="">-- เลือกสนาม --</option>
                             </select>
                         </div>
