--- a/service-ballthai/templates/matches.html
+++ b/service-ballthai/templates/matches.html
@@ -99,6 +99,7 @@
                     <div style="margin-bottom:1rem;">
                         <label>สถานะการแข่งขัน</label>
                         <select name="match_status" id="match_status_select" class="search-input" required>
+                            <option value="ADD">ADD</option>
                             <option value="FINISHED">FINISHED</option>
                             <option value="OFF">OFF</option>
                         </select>
