--- a/service-ballthai/templates/matches.html
+++ b/service-ballthai/templates/matches.html
@@ -65,11 +65,11 @@
                     </div>
                     <div style="margin-bottom:1rem;">
                         <label>วันแข่งขัน</label>
-                        <input type="date" name="start_date" required class="search-input">
+                        <input type="date" name="start_date" id="start_date" required class="search-input">
                     </div>
                     <div style="margin-bottom:1rem;">
                         <label>เวลาแข่งขัน</label>
-                        <input type="time" name="start_time" required class="search-input">
+                        <input type="time" name="start_time" id="start_time" required class="search-input">
                     </div>
                     <div style="margin-bottom:1rem;">
                         <label>ทีมเหย้า</label>
@@ -85,8 +85,8 @@
                     </div>
                     <div style="margin-bottom:1rem;">
                         <label>สกอร์</label>
-                        <input type="number" name="home_score" min="0" value="0" style="width:60px;"> - <input
-                            type="number" name="away_score" min="0" value="0" style="width:60px;">
+                        <input type="number" name="home_score" id="home_score" min="0" value="0" style="width:60px;"> - <input
+                                                    type="number" name="away_score" id="away_score" min="0" value="0" style="width:60px;">
                     </div>
                     <div style="margin-bottom:1rem;">
                         <label>Channel (ทีวีหลัก)</label>
