--- a/service-ballthai/templates/dashboard.html
+++ b/service-ballthai/templates/dashboard.html
@@ -7,22 +7,7 @@
     <link rel="stylesheet" href="/static/css/dashboard.css">
 </head>
 <body>
-    <div class="header">
-        <div class="header-content">
-            <div class="logo">⚽ BallThai Dashboard</div>
-            <nav style="margin-left: 32px; display: inline-block;">
-                <a href="/dashboard.html" style="margin-right: 16px; color: #fff; text-decoration: none;">🏠 หน้าหลัก</a>
-                <a href="/leagues.html" style="margin-right: 16px; color: #fff; text-decoration: none;">🏆 ลีก</a>
-                <a href="/teams.html" style="margin-right: 16px; color: #fff; text-decoration: none;">⚽ ทีม</a>
-                <a href="/standings.html" style="margin-right: 16px; color: #fff; text-decoration: none;">📈 ตารางคะแนน</a>
-                <a href="/matches.html" style="margin-right: 16px; color: #fff; text-decoration: none; font-weight: bold;">📅 แมทช์</a>
-            </nav>
-            <div class="user-info" style="float: right;">
-                <span id="userWelcome">ยินดีต้อนรับ</span>
-                <button class="logout-btn" onclick="logout()">ออกจากระบบ</button>
-            </div>
-        </div>
-    </div>
+    {{ template "_nav.html" . }}
 
     <div class="container">
         <div id="errorMessage" class="error" style="display: none;"></div>
