--- a/service-ballthai/templates/leagues.html
+++ b/service-ballthai/templates/leagues.html
@@ -39,6 +39,10 @@
                     <input type="text" id="leagueName" name="name" required 
                            placeholder="เช่น Thai League 1, Premier League">
                 </div>
+                <div class="form-group">
+                    <label for="thaileageid">ID ลีก (thaileageid):</label>
+                    <input type="number" id="thaileageid" name="thaileageid" placeholder="เช่น 207">
+                </div>
                 
                 <div class="form-actions">
                     <button type="button" onclick="closeModal()" class="btn btn-secondary">ยกเลิก</button>
