--- a/service-ballthai/templates/leagues.html
+++ b/service-ballthai/templates/leagues.html
@@ -24,6 +24,9 @@
         <div class="leagues-grid" id="leaguesGrid">
             <!-- Leagues will be loaded here -->
         </div>
+        <script>
+        // เพิ่มฟังก์ชัน renderLeagues ให้รองรับปุ่มดึงทีม (JS จะถูกแก้ใน leagues.js)
+        </script>
     </div>
 
     <!-- Add/Edit League Modal -->
