edit player scrap

--- a/service-ballthai/templates/players.html
+++ b/service-ballthai/templates/players.html
@@ -93,8 +93,8 @@
                         <div style="margin-bottom:1rem;">
                             <label>สถานะ</label>
                             <select name="status" id="edit-status" class="form-control">
-                                <option value="0">ON</option>
-                                <option value="1">OFF</option>
+                                <option value="0">เปิดดึงข้อมูล</option>
+                                <option value="1">ปิดดึงข้อมูล</option>
                             </select>
                         </div>
                         <div style="text-align:right;">
