--- a/service-ballthai/templates/teams.html
+++ b/service-ballthai/templates/teams.html
@@ -94,6 +94,7 @@
         </div>
     </div>
 
-    <script src="/static/js/teams.js"></script>
+    <!-- Cache-busting query param to force clients to fetch latest JS after deploy -->
+    <script src="/static/js/teams.js?v=2"></script>
 </body>
 </html>
