--- a/service-ballthai/templates/matches.html
+++ b/service-ballthai/templates/matches.html
@@ -95,7 +95,8 @@
                     </div>
                     <div style="margin-bottom:1rem;">
                         <label>สถานะการแข่งขัน</label>
-                        <select name="match_status" id="match_status_select" class="search-input" required>                            
+                        <select name="match_status" id="match_status_select" class="search-input">                            
+                            <option value="ADD">ADD - (ไม่ระบุ)</option>
                             <option value="FINISHED">FINISHED</option>
                             <option value="OFF">OFF - ปิดดึงข้อมูล</option>
                         </select>
