--- a/service-ballthai/templates/matches.html
+++ b/service-ballthai/templates/matches.html
@@ -97,7 +97,8 @@
                         <label>สถานะการแข่งขัน</label>
                         <select name="match_status" id="match_status_select" class="search-input">                            
                             <option value="ADD">ADD - (ไม่ระบุ)</option>
-                            <option value="FINISHED">FINISHED</option>
+                            <option value="SLIP">SLIP - เลื่อน</option>
+                            <option value="FINISHED">FINISHED - จบการแข่งขัน</option>
                             <option value="OFF">OFF - ปิดดึงข้อมูล</option>
                         </select>
                     </div>
