--- a/service-ballthai/templates/standings.html
+++ b/service-ballthai/templates/standings.html
@@ -21,7 +21,7 @@
         <div id="stageZoneContainer"></div>
         <div id="standingsContainer"></div>
     </div>
-    <script src="/static/js/standing.js"></script>
+    <script src="/static/js/standing.js?v=1"></script>
 </body>
 
 <script>
